updated list of tutors, removed elvin as tutors, removed his socials, and emoji

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <p class="about-us-1">We are tutors committed to help Sec 4 and 5's succeed in their studies.</p>
-                <p class="emoji"> 👩🏾‍🎓👨🏾‍🎓</p>
+                <p class="emoji">👩🏾‍🎓</p>
                 <p class="emoji">👩🏾‍🎓👩🏾‍🎓</p>
             </div>
             <div class="img-container">
@@ -132,20 +132,6 @@
                 </div>
             </div>
 
-            <!-- Elvin -->
-            <div class="tutor">
-                <div class="item" data-aos="fade-down" data-aos-duration="1000">
-                    <div class="tutor-img">
-                        <img src="attr/elvin grid.png" alt="#">
-                    </div>
-                </div>
-                <div class="item" data-aos="fade-down" data-aos-duration="1000">
-                    <h3>Elvin Elephant</h3>
-                    <p>
-                        Proficient in both Math and Science, you are guaranteed to get your questions answered.
-                    </p>
-                </div>
-            </div>
             <!-- Teshi -->
             <div class="tutor">
                 <div class="item" data-aos="fade-down" data-aos-duration="1000">
@@ -276,23 +262,6 @@
                 </div>
             </div>
 
-            <!-- Elvin -->
-
-            <div class="item" data-aos="fade-down" data-aos-duration="1000">
-                <div class="socials-individual socials-individual-2">
-                    <h3>Elvin</h3>
-                    <div class="facebook">
-                        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-                        <span><a href="https://www.facebook.com/profile.php?id=61552535741428"
-                                target="_blank">Facebook</a></span>
-                    </div>
-
-                    <div class="email">
-                        <i class="fa fa-envelope fa-2x" aria-hidden="true" href="""></i>
-                            <span><a href=" mailto:elvin.elephantthoughts@gmail.com">E-mail</a></span>
-                    </div>
-                </div>
-            </div>
 
             <!-- Teshi -->
 
