changed time on schedule

--- a/events.html
+++ b/events.html
@@ -29,21 +29,21 @@
         <!-- Challenges of the Week -->
         
         <div class="item" data-aos="fade-down" data-aos-duration="1000">
-            <div class="events-raffle">
+            <!-- <div class="events-raffle">
                 <h1>Here is your challenge of the week!</h1>
                 <figure>
                     <img src="attr/science chal 2.png" alt="">
                     <figcaption>Challenge ends May 31</figcaption>
                 </figure>
             </div>
-        </div>
+        </div> -->
 
         <div class="item" data-aos="fade-down" data-aos-duration="1000">
             <div class="events-raffle">
                 <h1>Here is the solution for the last challenge!</h1>
                 <figure>
-                    <img src="attr/mth chall 3 solution.png" alt="">
-                    <figcaption>Ended Apr 19th.</figcaption>
+                    <img src="attr/ANSWER SCIENCE Q.png" alt="">
+                    <figcaption>Ended May 31th.</figcaption>
                 </figure>
             </div>
         </div>
@@ -53,7 +53,7 @@
                 <h1>Here is the winner of our last challenge!</h1>
                 <figure>
                     <img src="attr/math2.jpg" alt="">
-                    <h1>Ed Linton</h1>
+                    <h1>Destiny Wapachee</h1>
                     <figcaption>Congrats on  answering our challenge correctly and getting chosen in our raffle!</figcaption>
                 </figure>
             </div>
@@ -66,10 +66,10 @@
 
 
         <!-- Students of the Week -->
-        <div class="color-container">
+        <!-- <div class="color-container"> -->
 
             <!-- Math Student of Week -->
-            <div class="item" data-aos="fade-down" data-aos-duration="1000">
+            <!-- <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="events-raffle-winner">
                     <h2>Math Student of the Week</h2>
 
@@ -83,10 +83,10 @@
                     </p>
                 </div>
              </div>
-
+ -->
 
             <!-- Science Student of Week -->
-            <div class="item" data-aos="fade-down" data-aos-duration="1000">
+            <!-- <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="events-raffle-winner">
                     <h2>Science Student of the Week</h2>
 
@@ -100,12 +100,12 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
             <!-- Vertical Elipsis -->
-        <div class="vertical-elipsis">
+        <!-- <div class="vertical-elipsis">
             <h1>&#8942;</h1>
-        </div>
+        </div> -->
 
         <!-- Upcoming Events -->
         <div class="upcoming-events">
