took out students of the week, added the current events going on right now for last two weeks of school

--- a/events.html
+++ b/events.html
@@ -66,46 +66,50 @@
 
 
         <!-- Students of the Week -->
-        <!-- <div class="color-container"> -->
+        <div class="color-container">
 
             <!-- Math Student of Week -->
-            <!-- <div class="item" data-aos="fade-down" data-aos-duration="1000">
+            <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="events-raffle-winner">
-                    <h2>Math Student of the Week</h2>
+                    <h1>Other Events</h1>
 
+
+                    <h2>Raffle Time</h2>
                     <div class="events-raffle-winner-img">
-                        <img src="attr/math.jpg" alt="#">
+                        <img src="attr/ET Raffle flyer - final/1.png" alt="#">
+                        <img src="attr/ET Raffle flyer - final/2.png" alt="#">
                     </div>
 
-                    <h3>Gracin Brien</h3>
+                    <h3>Raffle Event</h3>
                     <p>
-                    Congratulations on coming in and catching up with your Math!
+                        For every hour of tutoring at Elephant Thoughts, you receive 1 raffle entry to win a big prize!
                     </p>
                 </div>
              </div>
- -->
 
-            <!-- Science Student of Week -->
-            <!-- <div class="item" data-aos="fade-down" data-aos-duration="1000">
+
+            <!-- Cheat Sheet Incentive -->
+            <div class="item" data-aos="fade-down" data-aos-duration="1000">
                 <div class="events-raffle-winner">
-                    <h2>Science Student of the Week</h2>
+                    <h2>Finish Your Cheat Sheet, Win a Gift Card!</h2>
+
 
                     <div class="events-raffle-winner-img">
-                        <img src="attr/science.jpg" alt="#">
+                        <img src="attr/cheat sheet incentive  - final.png" alt="#">
                     </div>
 
-                    <h3>Landen Spencer</h3>
+                    <h3>Win a Gift Card of Your Choice</h3>
                     <p>
-                     Congratulations on coming to Elephant Thoughts and catching up with your Science!
+                     The first <span class="bold">15</span> students to complete their cheat sheet will win a <span class="bold">$25</span> gift card of their choice!
                     </p>
                 </div>
             </div>
-        </div> -->
+        </div>
 
             <!-- Vertical Elipsis -->
-        <!-- <div class="vertical-elipsis">
+        <div class="vertical-elipsis">
             <h1>&#8942;</h1>
-        </div> -->
+        </div>
 
         <!-- Upcoming Events -->
         <div class="upcoming-events">
