adding a sentence in current events to push the changes properly?

--- a/events.html
+++ b/events.html
@@ -100,7 +100,7 @@
 
                     <h3>Win a Gift Card of Your Choice</h3>
                     <p>
-                     The first <span class="bold">15</span> students to complete their cheat sheet will win a <span class="bold">$25</span> gift card of their choice!
+                     The first <span class="bold">15</span> students to complete their cheat sheet will win a <span class="bold">$25</span> gift card of their choice! Make sure to show one of the Elephants!
                     </p>
                 </div>
             </div>
